# SimilarityDetection

./: README.md
SimilarityDetectionCuda/: CMakeLists.txt
SimilarityDetectionCuda/include/: GST_mod.h  KRGST.h  KarpRabin.h  Parameters.h  Program.h  Refactor.h  Scope.h  Table.h  Tile.h  string_tokens.h
SimilarityDetectionCuda/src/: GST_mod.cpp  KRGST.cpp  KarpRabin.cpp  Parameters.cpp  Program.cpp  ProgramPair.cpp  Refactor.cpp  Table.cpp  bison_util.cpp  findMatchesKernel.cu  lexer.cpp  main.cpp  parser.cpp  parser.hpp  tokenizer_c_interface.cpp  tokentype.cpp
SimilarityDetectionPthreads/: CMakeLists.txt
SimilarityDetectionPthreads/include/: GST_mod.h  ProgramPair.h  Token.h  bison_util.h
SimilarityDetectionPthreads/res/: dpl.l  dpl.y
SimilarityDetectionPthreads/src/: GST_mod.cpp  KRGST.cpp  KarpRabin.cpp  ParserMain.cpp  Scope.cpp  Token.cpp  lexer.cpp  main.cpp  parser.cpp  parser.hpp
SimilarityDetectionSeq/: CMakeLists.txt
SimilarityDetectionSeq/include/: GST_mod.h  KRGST.h  KarpRabin.h  Parameters.h  Program.h  Refactor.h  dpl.tab.h  tokenizer_c_interface.h  tokentype.h
SimilarityDetectionSeq/src/: KarpRabin.cpp  Parameters.cpp  Program.cpp  lexer.cpp  main.cpp  parser.cpp  parser.hpp  string_tokens.cpp
tests/: test_suite.tar.bz2
